tests/custom/STARIS_2022/operation-type-errors/or-type-error/stderr.expected
Error:
    or-type-error.essence:2:19:
  |
2 | such that b = (or(5))
  |                   ^
Type error:
	Expected: "Collection of boolean"
	Got: int

cat: *.solution: No such file or directory
